--- a/petters-todo.html
+++ b/petters-todo.html
@@ -2,42 +2,43 @@
 <head>
   <title>Todo List</title>
 </head>
-
 <body>
   <div class="container">
     <header>
-      <h1>Todo List</h1>
-    <form class="new-task">
-      <input type="text" name="text" placeholder="Type to add new tasks" />
-    </form>
+      <h1>Todo List ({{incompleteCount}})</h1>
+      {{#if currentUser}}
+      <label class="hide-completed">
+        <input type="checkbox" checked="{{hideCompleted}}" />
+        Hide Completed Tasks
+      </label>
+      
+      <form class="new-task">
+        <input type="text" name="text" placeholder="Type to add new tasks" />
+      </form>
+      {{/if}}
     </header>
-
+    {{> loginButtons}}
     <ul>
       {{#each tasks}}
-        {{> task}}
+      {{> task}}
       {{/each}}
     </ul>
   </div>
-
   <div class="footer">
     <ul>
       {{#each authors}}
-        {{> author}}
+      {{> author}}
       {{/each}}
     </ul>
   </div>
 </body>
-
 <template name="task">
-  <li class="{{#if checked}}checked{{/if}}">
-    <button class="delete">&times;</button>
-
-    <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-
-    <span class="text">{{text}}</span>
-  </li>
+<li class="{{#if checked}}checked{{/if}}">
+  <button class="delete">&times;</button>
+  <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
+  <span class="text"><strong>{{username}}</strong> - {{text}}</span>
+</li>
 </template>
-
 <template name="author">
-  <li><em><a href="http://twitter.com/{{name}}">@{{name}}</a></em></li>
+<li><em><a href="http://twitter.com/{{name}}">@{{name}}</a></em></li>
 </template>
